# opensim-metabolicsprobes

./: .gitignore  CMakeLists.txt  FindOpenSim.cmake  README.md  README.txt  RegisterTypes_osimMuscleMetabolicsProbes.cpp  RegisterTypes_osimMuscleMetabolicsProbes.h  UchidaBhargava2004MuscleMetabolicsProbe.cpp  UchidaBhargava2004MuscleMetabolicsProbe.h  UchidaUmberger2010MuscleMetabolicsProbe.cpp  UchidaUmberger2010MuscleMetabolicsProbe.h  appveyor.yml  osimMuscleMetabolicsProbesDLL.h
OpenSim 3.2-32bit-VS10/: AppState.xml  Unassigned  loadedwalking_subject07_noload_markerset.xml  loadedwalking_subject07_noload_staticpose.mot  loadedwalking_subject09_loaded_markerset.xml  loadedwalking_subject09_loaded_staticpose.mot  loadedwalking_subject09_noload_markerset.xml  loadedwalking_subject09_noload_staticpose.mot  loadedwalking_subject10_loaded_markerset.xml  loadedwalking_subject10_loaded_staticpose.mot  loadedwalking_subject10_noload_markerset.xml  loadedwalking_subject10_noload_staticpose.mot  subject01_scaledOnly.osim  subject01_simbody.osim  subject01_static_output.mot  subject07.osim  subject09.osim  subject09_adjusted_loaded_markered.osim  subject10.osim  subject10_adjusted_loaded_markered.osim
OpenSim 3.2-64bit-VS12/sdk/: buildinfo.txt
examples/: README.txt  subject01_Setup_Analyze_Metabolics.xml  subject01_simbody_adjusted.osim  subject01_walk1_ik.mot
examples/ReferenceResultsAnalyze/: subject01_walk1_ProbeReporter_probes.sto
examples/ResultsCMC/: subject01_walk1_controls.xml  (+1 more)
tests/: auxiliaryTestFunctions.h  testMuscleMetabolicsProbes.cpp
(+2008 files in other folders)
